# azure-endpoint-example-crew

Workspace/crews/azure-endpoint/hello_world/: README.md  pyproject.toml
Workspace/crews/azure-endpoint/hello_world/src/hello_world/: crew.py  main.py
Workspace/crews/azure-endpoint/hello_world/src/hello_world/config/: agents.yaml
